--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
       rel="stylesheet"
     />
     <!-- CSS links-->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
@@ -24,11 +28,7 @@
         >
         <ul class="site-nav list">
           <li><a href="./index.html" class="site-nav-item link">Studio</a></li>
-          <li
-            ><a href="./portfolio.html" class="site-nav-item link"
-              >Portfolio</a
-            ></li
-          >
+          <li><a href="./portfolio.html" class="site-nav-item link">Portfolio</a></li>
           <li><a href="" class="site-nav-item link">Contacts</a></li>
         </ul>
       </nav>
@@ -39,54 +39,54 @@
               >info@devstudio.com</a
             ></li
           >
-          <li
-            ><a href="tel:+110001111111" class="address-item link"
-              >+11 (000) 111-11-11</a
-            ></li
-          >
+          <li><a href="tel:+110001111111" class="address-item link">+11 (000) 111-11-11</a></li>
         </ul>
       </address>
     </header>
     <main>
       <!-- Section Hero -->
       <section class="hero">
-        <h1 class="main-title">Effective Solutions for Your Business</h1>
-        <button type="button" class="main-button btn">Order Service</button>
+        <div class="container">
+          <h1 class="main-title">Effective Solutions for Your Business</h1>
+          <button type="button" class="main-button btn">Order Service</button></div
+        >
       </section>
 
       <!-- Section Advantages -->
       <section class="advantages">
-        <h2 hidden class="section-title">Advantages</h2>
-        <ul class="list">
-          <li>
-            <h3 class="secondary-title">Strategy</h3>
-            <p class="advantages-text">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li>
-            <h3 class="secondary-title">Punctuality</h3>
-            <p class="advantages-text">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li>
-            <h3 class="secondary-title">Diligence</h3>
-            <p class="advantages-text">
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
-          <li>
-            <h3 class="secondary-title">Technologies</h3>
-            <p class="advantages-text">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+        <div class="container"
+          ><h2 hidden class="section-title">Advantages</h2>
+          <ul class="list">
+            <li>
+              <h3 class="secondary-title">Strategy</h3>
+              <p class="advantages-text">
+                Our goal is to identify the business problem to walk away with the perfect and
+                creative solution.
+              </p>
+            </li>
+            <li>
+              <h3 class="secondary-title">Punctuality</h3>
+              <p class="advantages-text">
+                Bring the key message to the brand's audience for the best price within the shortest
+                possible time.
+              </p>
+            </li>
+            <li>
+              <h3 class="secondary-title">Diligence</h3>
+              <p class="advantages-text">
+                Research and confirm brands that present the strongest digital growth opportunities
+                and minimize risk.
+              </p>
+            </li>
+            <li>
+              <h3 class="secondary-title">Technologies</h3>
+              <p class="advantages-text">
+                Design practice focused on digital experiences. We bring forth a deep passion for
+                problem-solving.
+              </p>
+            </li>
+          </ul></div
+        >
       </section>
 
       <!-- Section What are we doing -->
@@ -174,8 +174,8 @@
         >WEB<span class="footer-logo-element">Studio</span></a
       >
       <p class="footer-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
+        Increase the flow of customers and sales for your business with digital marketing & growth
+        solutions.
       </p>
     </footer>
   </body>
