--- a/index.html
+++ b/index.html
@@ -13,39 +13,33 @@
       rel="stylesheet"
     />
     <!-- CSS links-->
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css"
-    />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css" />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!-- Header -->
     <header class="header">
-      <nav class="header-nav">
-        <a href="./index.html" class="header-logo link"
-          >web<span class="header-logo-element">Studio</span></a
-        >
-        <ul class="site-nav list">
-          <li><a href="./index.html" class="site-nav-item link">Studio</a></li>
-          <li><a href="./portfolio.html" class="site-nav-item link">Portfolio</a></li>
-          <li><a href="" class="site-nav-item link">Contacts</a></li>
-        </ul>
-      </nav>
-      <address class="address">
-        <ul class="address-nav list">
-          <li
-            ><a href="mailto:info@devstudio.com" class="address-item link"
-              >info@devstudio.com</a
-            ></li
-          >
-          <li><a href="tel:+110001111111" class="address-item link">+11 (000) 111-11-11</a></li>
-        </ul>
-      </address>
+      <div class="container"
+        ><nav class="header-nav">
+          <a href="./index.html" class="header-logo link">web<span class="header-logo-element">Studio</span></a>
+          <ul class="site-nav list">
+            <li><a href="./index.html" class="site-nav-item link">Studio</a></li>
+            <li><a href="./portfolio.html" class="site-nav-item link">Portfolio</a></li>
+            <li><a href="" class="site-nav-item link">Contacts</a></li>
+          </ul>
+
+          <address class="address">
+            <ul class="address-nav list">
+              <li><a href="mailto:info@devstudio.com" class="address-item link">info@devstudio.com</a></li>
+              <li><a href="tel:+110001111111" class="address-item link">+11 (000) 111-11-11</a></li>
+            </ul>
+          </address>
+        </nav></div
+      >
     </header>
     <main>
       <!-- Section Hero -->
-      <section class="hero">
+      <section class="hero section">
         <div class="container">
           <h1 class="main-title">Effective Solutions for Your Business</h1>
           <button type="button" class="main-button btn">Order Service</button></div
@@ -53,130 +47,98 @@
       </section>
 
       <!-- Section Advantages -->
-      <section class="advantages">
+      <section class="section">
         <div class="container"
-          ><h2 hidden class="section-title">Advantages</h2>
-          <ul class="list">
+          ><h2 class="section-title visually-hidden">Advantages</h2>
+          <ul class="advantages-list list">
             <li>
               <h3 class="secondary-title">Strategy</h3>
               <p class="advantages-text">
-                Our goal is to identify the business problem to walk away with the perfect and
-                creative solution.
+                Our goal is to identify the business problem to walk away with the perfect and creative solution.
               </p>
             </li>
             <li>
               <h3 class="secondary-title">Punctuality</h3>
               <p class="advantages-text">
-                Bring the key message to the brand's audience for the best price within the shortest
-                possible time.
+                Bring the key message to the brand's audience for the best price within the shortest possible time.
               </p>
             </li>
             <li>
               <h3 class="secondary-title">Diligence</h3>
               <p class="advantages-text">
-                Research and confirm brands that present the strongest digital growth opportunities
-                and minimize risk.
+                Research and confirm brands that present the strongest digital growth opportunities and minimize risk.
               </p>
             </li>
             <li>
               <h3 class="secondary-title">Technologies</h3>
               <p class="advantages-text">
-                Design practice focused on digital experiences. We bring forth a deep passion for
-                problem-solving.
+                Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.
               </p>
             </li>
           </ul></div
         >
       </section>
 
-      <!-- Section What are we doing -->
-      <section>
-        <h2 class="section-title">What are we doing</h2>
-        <ul class="list">
-          <li>
-            <img
-              src="./images/section_what_are_we_doing/img1.jpg"
-              alt="pc"
-              width="360"
-              height="300"
-            />
-          </li>
-          <li>
-            <img
-              src="./images/section_what_are_we_doing/img2.jpg"
-              alt="phone"
-              width="360"
-              height="300"
-            />
-          </li>
-          <li>
-            <img
-              src="./images/section_what_are_we_doing/img3.jpg"
-              alt="notebook and phone"
-              width="360"
-              height="300"
-            />
-          </li>
-        </ul>
+      <!-- Section Projects -->
+      <section class="section">
+        <div class="container"
+          ><h2 class="section-title">What are we doing</h2>
+          <ul class="projects-list list">
+            <li>
+              <img src="./images/section_what_are_we_doing/img1.jpg" alt="pc" width="360" height="300" />
+            </li>
+            <li>
+              <img src="./images/section_what_are_we_doing/img2.jpg" alt="phone" width="360" height="300" />
+            </li>
+            <li>
+              <img
+                src="./images/section_what_are_we_doing/img3.jpg"
+                alt="notebook and phone"
+                width="360"
+                height="300"
+              />
+            </li> </ul
+        ></div>
       </section>
 
       <!-- Section Our Team -->
-      <section class="team">
-        <h2 class="section-title">Our Team</h2>
-        <ul class="list team-list">
-          <li class="team-list-element">
-            <img
-              src="./images/section_our_team/Marc_Guerrero.jpg"
-              alt="Mark Guerrero"
-              width="264"
-              height="260"
-            />
-            <h3 class="secondary-title">Mark Guerrero</h3>
-            <p class="team-list-text">Product Designer</p>
-          </li>
-          <li class="team-list-element">
-            <img
-              src="./images/section_our_team/Tom_Ford.jpg"
-              alt="Tom Ford"
-              width="264"
-              height="260"
-            />
-            <h3 class="secondary-title">Tom Ford</h3>
-            <p class="team-list-text">Frontend Developer</p>
-          </li>
-          <li class="team-list-element">
-            <img
-              src="./images/section_our_team/Camila_Garsia.jpg"
-              alt="Camila Garcia"
-              width="264"
-              height="260"
-            />
-            <h3 class="secondary-title">Camila Garcia</h3>
-            <p class="team-list-text">Marketing</p>
-          </li>
-          <li class="team-list-element">
-            <img
-              src="./images/section_our_team/Daniel_Wilson.jpg"
-              alt="Daniel Wilson"
-              width="264"
-              height="260"
-            />
-            <h3 class="secondary-title">Daniel Wilson</h3>
-            <p class="team-list-text">UI Designer</p>
-          </li>
-        </ul>
+      <section class="section team">
+        <div class="container"
+          ><h2 class="section-title">Our Team</h2>
+          <ul class="list team-list">
+            <li class="team-list-element">
+              <img src="./images/section_our_team/Marc_Guerrero.jpg" alt="Mark Guerrero" width="264" height="260" />
+              <h3 class="secondary-title">Mark Guerrero</h3>
+              <p class="team-list-text">Product Designer</p>
+            </li>
+            <li class="team-list-element">
+              <img src="./images/section_our_team/Tom_Ford.jpg" alt="Tom Ford" width="264" height="260" />
+              <h3 class="secondary-title">Tom Ford</h3>
+              <p class="team-list-text">Frontend Developer</p>
+            </li>
+            <li class="team-list-element">
+              <img src="./images/section_our_team/Camila_Garsia.jpg" alt="Camila Garcia" width="264" height="260" />
+              <h3 class="secondary-title">Camila Garcia</h3>
+              <p class="team-list-text">Marketing</p>
+            </li>
+            <li class="team-list-element">
+              <img src="./images/section_our_team/Daniel_Wilson.jpg" alt="Daniel Wilson" width="264" height="260" />
+              <h3 class="secondary-title">Daniel Wilson</h3>
+              <p class="team-list-text">UI Designer</p>
+            </li>
+          </ul></div
+        >
       </section>
     </main>
 
     <!-- Footer -->
     <footer class="footer">
-      <a href="./index.html" class="footer-logo link"
-        >WEB<span class="footer-logo-element">Studio</span></a
+      <div class="container">
+        <a href="./index.html" class="footer-logo link">WEB<span class="footer-logo-element">Studio</span></a>
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with digital marketing & growth solutions.
+        </p></div
       >
-      <p class="footer-text">
-        Increase the flow of customers and sales for your business with digital marketing & growth
-        solutions.
-      </p>
     </footer>
   </body>
 </html>
