--- a/index.html
+++ b/index.html
@@ -119,13 +119,15 @@
                 class="img"
               />
               <div class="team-list-content">
-                <h3 class="secondary-title">Mark Guerrero</h3> <p class="team-list-text">Product Designer</p></div
+                <h3 class="secondary-title">Mark Guerrero</h3>
+                <p class="team-list-text">Product Designer</p></div
               >
             </li>
             <li class="team-list-element">
               <img src="./images/section_our_team/Tom_Ford.jpg" alt="Tom Ford" width="264" height="260" class="img" />
               <div class="team-list-content">
-                <h3 class="secondary-title">Tom Ford</h3> <p class="team-list-text">Frontend Developer</p></div
+                <h3 class="secondary-title">Tom Ford</h3>
+                <p class="team-list-text">Frontend Developer</p></div
               >
             </li>
             <li class="team-list-element">
@@ -137,7 +139,8 @@
                 class="img"
               />
               <div class="team-list-content">
-                <h3 class="secondary-title">Camila Garcia</h3> <p class="team-list-text">Marketing</p></div
+                <h3 class="secondary-title">Camila Garcia</h3>
+                <p class="team-list-text">Marketing</p></div
               >
             </li>
             <li class="team-list-element">
@@ -149,7 +152,8 @@
                 class="img"
               />
               <div class="team-list-content">
-                <h3 class="secondary-title">Daniel Wilson</h3> <p class="team-list-text">UI Designer</p></div
+                <h3 class="secondary-title">Daniel Wilson</h3>
+                <p class="team-list-text">UI Designer</p></div
               >
             </li>
           </ul></div
